// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should render loader component 1`] = `
<svgrmock
  aria-label="loader"
  class="css-5ftavm"
/>
`;

exports[`Loader should render loader component with label 1`] = `
<div
  class="css-zclaep"
>
  <svgrmock
    aria-label="loader"
    class="css-5ftavm"
  />
  <span
    class="css-1ti22to"
  >
    Loading...
  </span>
</div>
`;
